--- a/bedroom.html
+++ b/bedroom.html
@@ -8,6 +8,10 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <h1>Group F's Haunted Map</h1>
+  <div>
+        <img src="Bedroom Ghost.gif" class="bedroom" alt="">
+  </div>
 
 </body>
 </html>
