--- a/bedroom.html
+++ b/bedroom.html
@@ -9,8 +9,9 @@
 </head>
 <body>
   <h1>Group F's Haunted Map</h1>
+
   <div>
-        <img src="Bedroom Ghost.gif" class="bedroom" alt="">
+        <img src="Bedroom Ghost.gif" class="bedroom" alt="an abandoned bedroom">
   </div>
 
 </body>
