--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <h1>Group Four's Haunted Map</h1>
+
+  <div>
+    <img src="house.jpeg" class="house" alt="a haunted house">
+  </div>
 
 </body>
 </html>
