--- a/bedroom.html
+++ b/bedroom.html
@@ -10,6 +10,14 @@
 <body>
   <h1>Group F's Haunted Map</h1>
 
+<div class="container">
+  <div class="option1">
+      <div class="fade-in">
+        <p>a bunch random text here bc idk what we are going to put in for this story context. </p>
+      </div>
+  </div>
+</div>
+
   <div>
         <img src="Bedroom Ghost.gif" class="bedroom" alt="an abandoned bedroom">
   </div>
