--- a/index.html
+++ b/index.html
@@ -8,7 +8,15 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Group Four's Haunted Map</h1>
+  <h1>Group F's Haunted Map</h1>
+
+  <div class="container">
+    <div class="option1">
+        <div class="fade-in">
+          <p>a bunch random text here bc idk what we are going to put in for this story context. </p>
+        </div>
+    </div>
+  </div>
 
   <div>
     <img src="house.jpeg" class="house" alt="a haunted house">
