--- a/index.html
+++ b/index.html
@@ -10,17 +10,18 @@
 <body>
   <h1>Group F's Haunted Map</h1>
 
-  <div class="container">
-    <div class="option1">
-        <div class="fade-in">
-          <p>a bunch random text here bc idk what we are going to put in for this story context. </p>
-        </div>
-    </div>
+  <div class="container2">
+    <img src="house.jpeg" class="house" alt="a haunted house" usemap=#housecoords>
+    <map name="housecoords">
+      <area shape="rect" coords = "163,293,180,314" href="liveroom.html" alt="door">
+      <area shape="rect" coords="475,287,528,340" href="bedroom.html" alt="window">
+      <area shape="rect" coords="205,372,368,406" href="basement.html" alt="cellar">
+    </map>
   </div>
 
-  <div>
-    <img src="house.jpeg" class="house" alt="a haunted house">
-  </div>
+  <p class="mainopt1">You go to knock on the door because your mother raised you with manners but then the door disintegrates as soon as you touch it. </p>
+  <p class="mainopt2">You are singing happy birthday to calm yourself down when you suddenly fall into the broken cellar door.</p>
+  <p class="mainopt3">You are looking to catch Mewtwo on Pokemon Go and are determined to catch them, but need to hop inside the window to get closer.</p>
 
 </body>
 </html>
