--- a/bedroom.html
+++ b/bedroom.html
@@ -10,16 +10,22 @@
 <body>
   <h1>Group F's Haunted Map</h1>
 
-<div class="container">
-  <div class="option1">
-      <div class="fade-in">
-        <p>a bunch random text here bc idk what we are going to put in for this story context. </p>
-      </div>
-  </div>
-</div>
+  <p class="a">Move your cursor above the ghost to find your options.</p>
 
-  <div>
-        <img src="Bedroom Ghost.gif" class="bedroom" alt="an abandoned bedroom">
+  <div class="container">
+    <img src="Bedroom Ghost.gif" class="bedroom" alt="an abandoned bedroom with ghosts" usemap=#housecoords>
+    <map name="housecoords">
+      <area shape="rect" coords = "163,194,261,411" href="liveroom.html" alt="door">
+      <area shape="rect" coords="659,185,763,420" href="basement.html" alt="cellar">
+    </map>
+  </div>
+
+  <p class="bedopt1">a fucking bunch random text here bc idk what we are going to put in for this story context. </p>
+
+  <p class="bedopt2">a bunch random text here bc idk what we are going to put in for this story context. </p>
+
+  <div class="map1">
+    <img src="bedroom map.png" class="bedmap" alt="map of house with x in bedroom">
   </div>
 
 </body>
