--- a/basement.html
+++ b/basement.html
@@ -4,10 +4,31 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Haunted Basement</title>
   <link rel="stylesheet" href="style.css">
+  <iframe width="0" height="0" src="https://www.youtuberepeater.com/watch?v=QpehDEmmv5U#gsc.tab=0"></iframe>
 </head>
 <body>
+  <h1>Group F's Haunted Map</h1>
+
+  <p class="a"> Move your cursor over the image to find your options before you get possessed.</p>
+
+  <img src="basement.jpeg" class="basement" alt="haunted basement" usemap=#basementcoords>
+
+  <map name="basementcoords">
+    <area shape="rect" coords = "434,211,566,368" href="liveroom.html" alt="option1">
+    <area shape="rect" coords="71,200,137,364" href="bedroom.html" alt="option2">
+  </map>
+
+  <p class = "baseopt1"> Great! You fell in the basement! Pray to whoever you believe in that you don't see
+    them and limp up the stars.</p>
+
+  <p class = "baseopt2"> Great! You fell in the basement! Explore this area to see if it gives you a weapon cause
+    you are currently prey or it leads somewhere out of this hellhole.</p>
+
+  <img src="basementmap.png" class="basementmap" alt="map of house with x in basement">
+
+
 
 </body>
 </html>
