--- a/bedroom.html
+++ b/bedroom.html
@@ -6,23 +6,24 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Haunted Bedroom</title>
   <link rel="stylesheet" href="style.css">
+  <iframe width="0" height="0" src="https://www.youtuberepeater.com/watch?v=QpehDEmmv5U#gsc.tab=0"></iframe>
 </head>
 <body>
   <h1>Group F's Haunted Map</h1>
 
-  <p class="a">Move your cursor above the ghost to find your options.</p>
+  <p class="a">That didn't work! Move your cursor above the ghost to find your options.</p>
 
   <div class="container">
-    <img src="Bedroom Ghost.gif" class="bedroom" alt="an abandoned bedroom with ghosts" usemap=#housecoords>
-    <map name="housecoords">
+    <img src="Bedroom Ghost.gif" class="bedroom" alt="an abandoned bedroom with ghosts" usemap=#bedcoords>
+    <map name="bedcoords">
       <area shape="rect" coords = "163,194,261,411" href="liveroom.html" alt="door">
       <area shape="rect" coords="659,185,763,420" href="basement.html" alt="cellar">
     </map>
   </div>
 
-  <p class="bedopt1">a fucking bunch random text here bc idk what we are going to put in for this story context. </p>
+  <p class="bedopt1"> You roam about the house in search of the forbidden haunted house food.</p>
 
-  <p class="bedopt2">a bunch random text here bc idk what we are going to put in for this story context. </p>
+  <p class="bedopt2"> You hear a noise downstairs and decide now is the time to be apart of Mystery Gang.</p>
 
   <div class="map1">
     <img src="bedroom map.png" class="bedmap" alt="map of house with x in bedroom">
