--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Haunted Horror Map</title>
   <link rel="stylesheet" href="style.css">
+  <iframe width="0" height="0" src="https://www.youtuberepeater.com/watch?v=QpehDEmmv5U#gsc.tab=0"></iframe>
 </head>
 <body>
   <h1>Group F's Haunted Map</h1>
