--- a/liveroom.html
+++ b/liveroom.html
@@ -4,10 +4,23 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Haunted LivingRoom</title>
   <link rel="stylesheet" href="style.css">
+  <iframe width="0" height="0" src="https://www.youtuberepeater.com/watch?v=QpehDEmmv5U#gsc.tab=0"></iframe>
 </head>
-<body>
+<body class="live">
+
+    <h1 class="live">Group F's Haunted Map</h1>
+    <p class="a">Which door would you choose if you were followed by the Spaghetti monster?</p>
+
+      <img src="livingroom.jpeg" class="livroom" alt="a haunted living room" usemap=#livingcords
+       ><map name=livingcords>
+        <area shape="rect" coords ="712,134,802,269" href="basement.html" alt="door1">
+        <area shape="rect" coords="11,128,124,262" hresf="bedroom.html" alt="door2">
+
+      </map>
+      <img src="liveroommap.png" class=liveroommap alt="" srcset="">
+
 
 </body>
 </html>
